--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,28 +2,87 @@
 @{
     ViewBag.Title = "Home Page";
 }
-<div>
-    <h1>Eyewear Store System</h1>
+
+
+<!--   CAROUSEL   -->
+<div class="section" id="carousel">
+    <div class="container">
+        <div class="row">
+            <div class="">
+                <!-- Carousel Card -->
+                <div class="card card-raised card-carousel col-xs-12 col-md-10 offset-md-1" style="box-shadow: 0 0; top: -30px; margin-bottom: 0">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="~/Images/kit/bg2.jpg" alt="First slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4>
+                                        <i class="material-icons">location_on</i> Yellowstone National Park, United States
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="~/Images/kit/bg3.jpg" alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4>
+                                        <i class="material-icons">location_on</i> Somewhere Beyond, United States
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="~/Images/kit/bg.jpg" alt="Third slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4>
+                                        <i class="material-icons">location_on</i> Yellowstone National Park, United States
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <i class="material-icons">keyboard_arrow_left</i>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <i class="material-icons">keyboard_arrow_right</i>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <!-- End Carousel Card -->
+            </div>
+        </div>
+    </div>
 </div>
+<!--   end: CAROUSEL   -->
+
+
 @foreach (var item in Model)
 {
     <div>
-        <h1>@Html.DisplayFor(modelItem => item.CategoryName)</h1>
-        <div class="row">
+        <div class="alert alert-primary">
+            <h2 class="title">@Html.DisplayFor(modelItem => item.CategoryName)</h2>
+        </div>
+
+        <div class="container">
             @foreach (var subItem in item.Items)
             {
-                <div class="col-md-3 thumbnail myDiv">
-                    <img src="~/Uploads/@subItem.ItemImage"  style="height:220px" />                    
-                    <h3>@Html.DisplayFor(modelItem => subItem.BrandName)</h3>
-                    <h5>@Html.DisplayFor(modelItem => subItem.ModelNumber)</h5>
-                    <div class="row">
-                        <div class="col-md-offset-2 col-md-8">
-                            @Html.ActionLink("Details", "Details","Items", new { id = subItem.Id }, new { @class = "btn btn-default btn-block" })
+                <div class="col-sm-6 col-md-4">
+                    <div class="card text-primary bg-light mb-3">
+                        <img class="card-img-top" src="~/Uploads/@subItem.ItemImage" alt="@Html.DisplayFor(modelItem => item.CategoryName)">
+                        <div class="card-body">
+                            <h5 class="card-title text-primary">@Html.DisplayFor(modelItem => subItem.BrandName)</h5>                        
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <a href="~/Items/Details/@subItem.Id" class="btn btn-primary">Details</a>
+                            <div class="card-footer"><small class="text-muted">3 days ago</small></div>
                         </div>
                     </div>
-                    
-                </div>
+                </div>                
             }
         </div>
-    </div>
+    </div>                        
 }
