--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -1,28 +1,26 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="./Images/kit/free/apple-icon.png">
-    <link rel="icon" href="./Images/kit/free/favicon.png">
+    <link rel="apple-touch-icon" href="~/Images/kit/free/apple-icon.png">
+    <link rel="icon" href="~/Images/kit/free/favicon.png">
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="./Content/material-kit.css?v=2.0.2">
-    <link href="./Content/assets-for-demo/demo.css" rel="stylesheet" />
-    <!-- <link href="~/Content/Style.css" rel="stylesheet" />  -->
-    
+    <link rel="stylesheet" href="~/Content/material-kit.css?v=2.0.2">
+    <link href="~/Content/assets-for-demo/demo.css" rel="stylesheet" />
+    <link href="~/Content/css/Styles.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 
-<body class="index-page ">
-    <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
+<body class="index-page">
+    <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="./index.html">Material Kit </a>
+                <a class="navbar-brand" href="~/Home/Index">Eyewear Store</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
@@ -31,113 +29,65 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Items/Index" onclick="scrollToDownload()">
+                            <i class="material-icons">cloud_download</i> Products
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Branches/Index" onclick="scrollToDownload()">
+                            <i class="material-icons">cloud_download</i> Branches
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Home/Contact" onclick="scrollToDownload()">
+                            <i class="material-icons">cloud_download</i> Contact us
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Home/About" onclick="scrollToDownload()">
+                            <i class="material-icons">cloud_download</i> About us
+                        </a>
+                    </li>
                     <li class="dropdown nav-item">
                         <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            <i class="material-icons">apps</i> Components
+                            <i class="material-icons">apps</i> More
                         </a>
                         <div class="dropdown-menu dropdown-with-icons">
-                            <a href="./index.html" class="dropdown-item">
-                                <i class="material-icons">layers</i> All Components
+                            <a href="~/Account/Login" class="dropdown-item">
+                                <i class="material-icons">layers</i> Log in
                             </a>
-                            <a href="http://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html" class="dropdown-item">
-                                <i class="material-icons">content_paste</i> Documentation
+                            <a href="~/Account/Register" class="dropdown-item">
+                                <i class="material-icons">content_paste</i> Sign up
                             </a>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
-                            <i class="material-icons">cloud_download</i> Download
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
-                            <i class="fa fa-facebook-square"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
-                            <i class="fa fa-instagram"></i>
-                        </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style="background-image: url('Images/kit/bg2.jpg');">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 ml-auto mr-auto">
-                    <div class="brand">
-                        <h1>Material Kit.</h1>
-                        <h3>A Badass Bootstrap 4 UI Kit based on Material Design.</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="main main-raised">
 
-        <!--   CAROUSEL   -->
-        <div class="section" id="carousel">
+
+@if (ViewContext.RouteData.Values["controller"].ToString() == "Home")
+    {
+        String @height = "height300px";
+    }
+    <!-- if home page show this div in the master page-->
+    <div class="page-header header-filter clear-filter purple-filter " data-parallax="true">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 mr-auto ml-auto">
-                        <!-- Carousel Card -->
-                        <div class="card card-raised card-carousel">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                </ol>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100" src="Images/kit/bg2.jpg" alt="First slide">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h4>
-                                                <i class="material-icons">location_on</i> Yellowstone National Park, United States
-                                            </h4>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="Images/kit/bg3.jpg" alt="Second slide">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h4>
-                                                <i class="material-icons">location_on</i> Somewhere Beyond, United States
-                                            </h4>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="Images/kit/bg.jpg" alt="Third slide">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h4>
-                                                <i class="material-icons">location_on</i> Yellowstone National Park, United States
-                                            </h4>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                                    <i class="material-icons">keyboard_arrow_left</i>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                                    <i class="material-icons">keyboard_arrow_right</i>
-                                    <span class="sr-only">Next</span>
-                                </a>
-                            </div>
+                    <div class="col-md-8 ml-auto mr-auto">
+                        <div class="brand">
+                            <h2 class="title">Eyewear Store System</h2>
+                            <h3 class="desc">Saudi Arabis's biggest online eyewear store, under your service!</h3>
                         </div>
-                        <!-- End Carousel Card -->
                     </div>
                 </div>
             </div>
-        </div>
-        <!--   end: CAROUSEL   -->
+    </div>
 
+
+    <div class="main main-raised" id="main-body">
         <!--Render Body-->
         <div class="container text-center">
             <div class="row">
@@ -211,19 +161,21 @@
 
     
     <!--   Core JS Files   -->
-    <script src="./scripts/core/jquery.min.js"></script>
-    <script src="./scripts/core/popper.min.js"></script>
-    <script src="./scripts/bootstrap-material-design.js"></script>
+    <script src="~/scripts/core/jquery.min.js"></script>
+    <script src="~/scripts/core/popper.min.js"></script>
+    <script src="~/scripts/bootstrap-material-design.js"></script>
     <!--  Plugin for Date Time Picker and Full Calendar Plugin  -->
-    <script src="./scripts/plugins/moment.min.js"></script>
+    <script src="~/scripts/plugins/moment.min.js"></script>
     <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-    <script src="./scripts/plugins/bootstrap-datetimepicker.min.js"></script>
+    <script src="~/scripts/plugins/bootstrap-datetimepicker.min.js"></script>
     <!--	Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="./scripts/plugins/nouislider.min.js"></script>
+    <script src="~/scripts/plugins/nouislider.min.js"></script>
     <!-- Material Kit Core initialisations of plugins and Bootstrap Material Design Library -->
-    <script src="./scripts/material-kit.js?v=2.0.2"></script>
+    <script src="~/scripts/material-kit.js?v=2.0.2"></script>
+    <script src="~/scripts/custom.js"></script>
     <!-- Fixed Sidebar Nav - js With initialisations For Demo Purpose, Don't Include it in your project -->
-    <script src="./Content/assets-for-demo/js/material-kit-demo.js"></script>
+    <script src="~/Content/assets-for-demo/js/material-kit-demo.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
         <!-- VUE, AXIOS, TOASTR -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -232,9 +184,9 @@
     <script>
         $(document).ready(function() {
             //init DateTimePickers
-            materialKit.initFormExtendedDatetimepickers();
+            //materialKit.initFormExtendedDatetimepickers();
             // Sliders Init
-            materialKit.initSliders();
+            //materialKit.initSliders();
         });
     </script>
 </body>
