--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -20,7 +20,8 @@
     <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="~/Home/Index">Eyewear Store</a>
+                <a class="navbar-brand logo-white" href="~/Home/Index"><img src="~/Images/logo-white.png" alt=""></a>
+                <a class="navbar-brand logo-black" style="display: none" href="~/Home/Index"><img src="~/Images/logo-black.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
