--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
 <div class="section" id="carousel">
     <div class="container">
         <div class="row">
-            <div class="">
+            <div class=" col-xs-12">
                 <!-- Carousel Card -->
-                <div class="card card-raised card-carousel col-xs-12 col-md-10 offset-md-1" style="box-shadow: 0 0; top: -30px; margin-bottom: 0">
+                <div class="card card-raised card-carousel" style="box-shadow: 0 0; top: -30px; margin-bottom: 0">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
