--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
 {
     <div>
         <div class="alert alert-primary">
-            <h2 class="title">@Html.DisplayFor(modelItem => item.CategoryName)</h2>
+            <h2 class="titleX">@Html.DisplayFor(modelItem => item.CategoryName)</h2>
         </div>
 
         <div class="container">
