--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/Content/material-kit.css?v=2.0.2">
     <link href="~/Content/assets-for-demo/demo.css" rel="stylesheet" />
     <link href="~/Content/css/Styles.css" rel="stylesheet" />
+    <link href="~/Content/css/custom.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 
